--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/obj-Rui/react-project",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
