--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: install
         run: yarn
       - name: build
-        run: yarn build:test
+        run: yarn build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.0
         with:
